apps/team-alpha/jobs-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-api
  namespace: team-alpha
  labels:
    app: jobs-api
    team: team-alpha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jobs-api
  template:
    metadata:
      labels:
        app: jobs-api
        team: team-alpha
    spec:
      containers:
        - name: jobs-api
          image: ecps-jobs-api:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
